mysql_kub.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  ports:
  - port: 3306
  selector:
    app: mysql
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
spec:
  selector:
    matchLabels:
      app: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - image: mysql:5.6
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
        livenessProbe:
          exec:
            command:
            - sh
            - -c
            - 'mysqladmin ping -h localhost --protocol=tcp -u root -p${MYSQL_ROOT_PASSWORD}'
          initialDelaySeconds: 5
          periodSeconds: 5
        startupProbe:
          exec:
            command:
            - sh
            - -c
            - 'mysqladmin ping -h localhost --protocol=tcp -u root -p${MYSQL_ROOT_PASSWORD}'
          failureThreshold: 30
          periodSeconds: 10
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pvc
