registry.yml
apiVersion: v1
kind: Service
metadata:
  name: registry-img
spec:
  type: NodePort  
  ports:
  - port: 5000
    targetPort: 5000
    nodePort: 30500
  
  selector:
    app: registry-img
#  clusterIP: None   # doit pouvoir se fixer sur 1 pod, donc ne pas spécifier None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry-img
spec:
  selector:
    matchLabels:
      app: registry-img
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: registry-img
    spec:
      containers:
      - image: registry:2
        name: registry-img
        ports:
        - containerPort: 5000
          name: registry-img
        volumeMounts:
        - name: registry-img-persitence-storage
          mountPath: /var/lib/registry
      volumes:
      - name: registry-img-persitence-storage
        persistentVolumeClaim:
          claimName: registry-img-pvc
